==============================================================================
TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
==============================================================================

v6.19.0 May 01 2015
CACHE BUILD REQUIRED (trade.py buildcache -fi)
. (kfsone) "import" command (non-plugin behavior)
    - Restored the default behavior of forcefully overwriting existing data
      with values from the .prices file and deleting items that aren't listed
      in the import.
    - Added "--merge-import" option: only imports entries that are newer than
      existing local data and only removes entries when there is an explicit
      entry for it with 0 prices.
    - Changed "--reset" to "--reset-all" because it's a scary command,
. (kfsone) Various commands:
    - Consistency:
      "demand" refers to what a station will buy,
      "supply" refers to what a station is selling,
    - Changed several command options from "--stock" to "--supply",
. (kfsone) "market" command:
    - Only show the age of items once,
. (kfsone) "nav" command:
    - Fixed --refuel-jumps
    - Added --pad-size to limit which stations will be listed/refuelled at,
. (kfsone) Performance:
    - Re-unified the StationBuying/StationSelling tables into StationItem,
    - Added StationBuying and StationSelling views,
    - Minor refactor of getTrades to reduce the pathalogical near O(n^2)
      behavior it used to match buyers to sellers,
    - Improved performance of nav command slightly,


v6.18.6 Apr 27 2015
. (kfsone) Fixed #225 'Generator already running'
. (kfsone) Performance improvement: Reduced the cost of "getTrades"

v6.18.5 Apr 26 2015
. (kfsone) Fixed #224 run -vv and above was raising an exception
. (kfsone) Fixed #223 "unrecognized system" errors
. (gazelle) Lots of data fixes
. (snakeman via maddavo) Lots of station fixes

v6.18.4 Apr 24 2015
. (kfsone) Fix for updateLocalSystem that would change ALL systems at once

v6.18.3 Apr 19 2015